--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam vero totam enim illum porro, voluptas qui blanditiis ab. Pariatur, eos. Debitis alias, corrupti accusamus minus saepe odio harum numquam. Quam?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias soluta omnis ipsa esse quaerat in vitae provident sunt corrupti? Nemo provident veniam labore recusandae nostrum impedit aut nisi minima similique!</p>
         </article>
     </main>
 </body>
