--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
-            <h2>Curso de HTML5 com CSS3</h2>
+            <h2>Curso de HTML5 e CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam vero totam enim illum porro, voluptas qui blanditiis ab. Pariatur, eos. Debitis alias, corrupti accusamus minus saepe odio harum numquam. Quam?</p>
             <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p>
